[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TimeSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/img/Rectangle 1 (1).png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 28
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Título del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSprite" parent="." instance=ExtResource( 5 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 718.421, 455.377 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -580.0
margin_top = -226.097
margin_right = 619.0
margin_bottom = 144.903
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Existen diversos programas que interactúan con entradas de información, por ejemplo, las grabaciones de audio siempre requieren de un entorno gráfico y visual con botones de inicio y pausa, pero mucho más importante requieren de una entrada de audio que será captada por un _________, existen también otras formas de ingresar información a un sistema de cómputo para ser procesada, el _________ nos permite ingresar información a un procesador de texto con fines de su edición o transcripción. No podemos olvidar uno de los periféricos más importantes el cual nos permite interactuar con lo que vemos en pantalla ese es el __________, existen otros periféricos adicionales que nos permiten interactuar con un sistema de computo y realizar tareas especiales como digitalizar nuestra imagen y enviarla para comunicarnos con otra persona, por ejemplo, en un software de videollamadas, este componente periférico al que nos referimos es una __________."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="MenuButton" parent="Sprite/Label"]
margin_left = 278.0
margin_top = 118.0
margin_right = 400.0
margin_bottom = 140.0
text = "Selecciona"
flat = false
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton2" type="MenuButton" parent="Sprite/Label"]
margin_left = 632.0
margin_top = 154.0
margin_right = 754.0
margin_bottom = 176.0
text = "Selecciona"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton3" type="MenuButton" parent="Sprite/Label"]
margin_left = 528.0
margin_top = 265.0
margin_right = 667.0
margin_bottom = 287.0
text = "Selecciona"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton4" type="MenuButton" parent="Sprite/Label"]
margin_left = 234.0
margin_top = 417.0
margin_right = 373.0
margin_bottom = 439.0
text = "Selecciona"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestOne" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 278.0
margin_top = 110.0
margin_right = 432.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Microfono"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestOne2" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 638.0
margin_top = 146.0
margin_right = 792.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Microfono"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestOne3" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 528.0
margin_top = 257.0
margin_right = 682.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Microfono"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestOne4" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 234.0
margin_top = 409.0
margin_right = 388.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Microfono"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestTwo" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 278.0
margin_top = 110.0
margin_right = 432.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestTwo2" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 638.0
margin_top = 146.0
margin_right = 792.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestTwo3" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 528.0
margin_top = 257.0
margin_right = 682.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestTwo4" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 234.0
margin_top = 409.0
margin_right = 388.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mouse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestThree" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 278.0
margin_top = 110.0
margin_right = 432.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Camara"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestThree2" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 638.0
margin_top = 146.0
margin_right = 792.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Camara"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestThree3" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 528.0
margin_top = 257.0
margin_right = 682.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Camara"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestThree4" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 234.0
margin_top = 409.0
margin_right = 388.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Camara"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestFour" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 278.0
margin_top = 110.0
margin_right = 432.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Teclado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestFour2" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 638.0
margin_top = 146.0
margin_right = 792.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Teclado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestFour3" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 528.0
margin_top = 257.0
margin_right = 682.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Teclado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestFour4" type="Label" parent="Sprite/Label"]
visible = false
margin_left = 234.0
margin_top = 409.0
margin_right = 388.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Teclado"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
